<resources>
    <string name="app_name">quiz_app</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="create_new_quiz">Create new quiz</string>
    <string name="menu_quizes">Quizzes</string>
    <string name="menu_student_groups">Student groups</string>
    <string name="menu_user_settings">User settings</string>
    <string name="menu_app_settings">App settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_a_new_quiz">Add a new quiz</string>
    <string name="quiz_name">Quiz name</string>
    <string name="enter_quiz">Enter quiz name</string>
    <string name="max_time">Maximum time to complete</string>
    <string name="in_minutes">In minutes(optional)</string>
    <string name="max_score">Maximum score per question</string>
    <string name="enter_score">Enter score number</string>
    <string name="max_attemps">Maximum quiz attemps</string>
    <string name="enter_attemps">Enter attemps number</string>
    <string name="pin">Pin for quiz access</string>
    <string name="optional">(optional)</string>
    <string name="next">Next</string>
    <string name="save">save</string>
    <string name="x_minutes">x minutes</string>
    <string name="add_new_question">Add new question</string>
    <string name="question_list">Question list:</string>
    <string name="no_account_hint">Don\'t have an account? Press the button below to sign up!</string>
    <string name="account_login">Account Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="student">Student</string>
    <string name="professor">Professor</string>
    <string name="login">Log in</string>
    <string name="signup">Sign up</string>
    <string name="log_out">Log out</string>
    <string name="choose_email">Choose your email address</string>
    <string name="choose_password">Choose your password</string>
    <string name="create_account">Create account</string>
    <string name="account_hint">Already have an account? Press the button below to log in</string>
    <string name="question">Question</string>
    <string name="question_type">Question Type</string>
    <string name="free_answer">Add a new question</string>
    <string name="multiple_choice_unique">Multiple choice, unique answer</string>
    <string name="multiple_choice_multiple">Multiple choice, multiple answer</string>
    <string name="free_response">Free response answer</string>
    <string name="add_question">Add question</string>
    <string name="no_question_text">Please fill in the question text.</string>
    <string name="no_questions">The quiz should have at least one question!</string>
    <string name="quiz_created_successfully">Quiz created successfully!</string>
</resources>
