<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_new_quiz"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/create_new_quiz" />
        <item
            android:id="@+id/nav_quiz_list"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_quizes" />
        <item
            android:id="@+id/nav_student_list"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_student_groups" />
    </group>

    <item android:title="Settings">
        <menu>
            <item
                android:id="@+id/nav_user_settings"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_user_settings" />
            <item
                android:id="@+id/nav_app_settings"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_app_settings" />
        </menu>
    </item>

</menu>
