<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".fragments.AddQuestionFragment">

    <Button
        android:id="@+id/add_question"
        android:layout_width="322dp"
        android:layout_height="53dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="40dp"
        android:text="@string/add_question"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.415"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/quiz_pin_input"
        app:layout_constraintVertical_bias="0.737" />

    <View
        android:id="@+id/view8"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="101dp"
        android:layout_marginBottom="30dp"
        android:background="@color/cardview_shadow_start_color"
        app:layout_constraintBottom_toTopOf="@+id/question_et2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/title2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="540dp"
        android:text="@string/add_new_question"
        android:textSize="@dimen/headerTextSize"
        app:layout_constraintBottom_toTopOf="@+id/next"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/question_et2"
        android:layout_width="220dp"
        android:layout_height="0dp"
        android:layout_marginStart="82dp"
        android:layout_marginLeft="82dp"
        android:layout_marginBottom="38dp"
        android:ems="10"
        android:hint="@string/question"
        android:inputType="text|textMultiLine"
        app:layout_constraintBottom_toTopOf="@+id/type_tw"
        app:layout_constraintStart_toStartOf="@+id/view8"
        app:layout_constraintTop_toBottomOf="@+id/view8" />

    <TextView
        android:id="@+id/type_tw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="21dp"
        android:text="@string/question_type"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup3"
        app:layout_constraintStart_toStartOf="@+id/question_et2"
        app:layout_constraintTop_toBottomOf="@+id/question_et2" />

    <RadioGroup
        android:id="@+id/radioGroup3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="280dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/type_tw"
        app:layout_constraintTop_toBottomOf="@+id/type_tw">

        <RadioButton
            android:id="@+id/radioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/multiple_choice_unique" />

        <RadioButton
            android:id="@+id/radioButton4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/multiple_choice_multiple" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/free_response" />

    </RadioGroup>

</android.support.constraint.ConstraintLayout>