<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SignUpActivity">

    <EditText
        android:id="@+id/email_tw"
        android:layout_width="270dp"
        android:layout_height="43dp"
        android:layout_marginTop="72dp"
        android:ems="10"
        android:hint="@string/choose_email"
        android:inputType="textEmailAddress"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view9" />

    <EditText
        android:id="@+id/password_tw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/choose_password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_tw" />

    <Button
        android:id="@+id/create_btn"
        android:layout_width="247dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/create_account"
        android:onClick="createAccount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_tw" />

    <Button
        android:id="@+id/login_btn"
        android:layout_width="247dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="46dp"
        android:onClick="login"
        android:text="@string/login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/no_account_tw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="21dp"
        android:text="@string/account_hint"
        app:layout_constraintBottom_toTopOf="@+id/login_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/create_btn"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/sign_up_tw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="113dp"
        android:layout_marginBottom="65dp"
        android:text="@string/signup"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/email_tw"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view9"
        android:layout_width="411dp"
        android:layout_height="2dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="70dp"
        android:background="@color/cardview_shadow_start_color"
        app:layout_constraintBottom_toTopOf="@+id/email_tw"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_tw" />


</android.support.constraint.ConstraintLayout>